--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,15 @@
 /* rgb(35, 35, 37) */
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 .jumbotron {
-    background-color: #6FA8DD; 
-
+    background-color: #6fa8dd;
+    color: white;
     margin-bottom: 0;
     padding-bottom: 0;
     /* padding-bottom: 0.25%; */
-    
 }
 
 .navigation {
@@ -22,15 +21,44 @@ body {
     padding: 0;
 }
 
-.navbar-light .navbar-nav .active>.nav-link {
+.sticky + .content {
+    padding-top: 60px;
+}
+
+#navigation-bar {
+    overflow: hidden;
+    z-index: 100;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.navbar-expand-lg .navbar-collapse {
+    background-color: #6fa8dd;
+}
+
+.mx-auto {
+    margin-left: 25% !important;
+}
+
+.navbar-light .navbar-nav .active > .nav-link {
     background-color: #fff;
+}
+
+.nav-link {
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+    font-weight: 600;
 }
 
 .navbar-light .navbar-nav .nav-link {
     color: #000;
-    background-color: #6FA8DD;
+    background-color: #6fa8dd;
+    color: #fff;
 }
-
 
 .pagination {
     margin-top: 5%;
@@ -43,7 +71,7 @@ body {
     border-bottom-color: #fff;
 }
 
-.page-item .page-link{
+.page-item .page-link {
     background-color: #fff;
     color: #000;
     border-color: rgb(35, 35, 37);
@@ -58,6 +86,7 @@ h4 {
     margin: auto;
     padding-top: 5%;
     padding-bottom: 5%;
+    font-weight: 600;
 }
 
 hr {
@@ -65,21 +94,27 @@ hr {
     margin-bottom: 1rem;
     border: 0;
     border-top: 5px solid rgba(0, 0, 0, 0.1);
-  }
+}
 
 .search-feature:last-child {
     padding-bottom: 3%;
 }
 
-.download {
+/* .download {
     display: flex;
     justify-content: flex-end;
-}
-
+} */
+/* 
 #dld-button {
-    /* justify-content: center; */
+    /* justify-content: center;
     margin-right: 20.5%;
     margin-top: 3%;
+}
+*/
+
+.image {
+    width: 200px;
+    height: 375.5px;
 }
 
 .images {
@@ -87,7 +122,7 @@ hr {
     justify-content: space-evenly;
 }
 
-.test {
+.dld {
     display: flex;
     justify-content: center;
     align-self: center;
@@ -95,4 +130,18 @@ hr {
 
 .jumbo-top {
     margin-bottom: 2%;
+}
+
+.last {
+    margin-bottom: 2%;
+}
+
+.lead {
+    margin-top: 6%;
+    margin-right: 5%;
+}
+
+.caps {
+    font-weight: 300;
+    font-size: 5rem;
 }
