--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,11 @@
 
 body {
     font-family: "Montserrat", sans-serif;
+    font-weight: 400;
 }
 
 .jumbotron {
-    background-color: #6fa8dd;
+    background-color: #00477f;
     color: white;
     margin-bottom: 0;
     padding-bottom: 0;
@@ -37,7 +38,7 @@ body {
 }
 
 .navbar-expand-lg .navbar-collapse {
-    background-color: #6fa8dd;
+    background-color: #00477f;
 }
 
 .mx-auto {
@@ -56,7 +57,7 @@ body {
 
 .navbar-light .navbar-nav .nav-link {
     color: #000;
-    background-color: #6fa8dd;
+    background-color: #00477f;
     color: #fff;
 }
 
@@ -80,6 +81,7 @@ body {
 
 p {
     padding-bottom: 3%;
+    font-size: 1.25rem;
 }
 
 h4 {
@@ -87,6 +89,11 @@ h4 {
     padding-top: 5%;
     padding-bottom: 5%;
     font-weight: 600;
+    font-size: 2rem;
+}
+
+button {
+    font-weight: 400;
 }
 
 hr {
@@ -97,6 +104,10 @@ hr {
 }
 
 .search-feature:last-child {
+    padding-bottom: 3%;
+}
+
+.tour-feature:last-child {
     padding-bottom: 3%;
 }
 
@@ -126,6 +137,7 @@ hr {
     display: flex;
     justify-content: center;
     align-self: center;
+    padding-bottom: 3%;
 }
 
 .jumbo-top {
@@ -139,9 +151,24 @@ hr {
 .lead {
     margin-top: 6%;
     margin-right: 5%;
+    font-weight: 400;
 }
 
 .caps {
-    font-weight: 300;
+    font-weight: 600;
     font-size: 5rem;
+}
+
+h1 {
+    font-weight: 600 !important;
+}
+
+@media (max-width: 575.98px) {
+    .jumbo-img {
+        display: none;
+    }
+
+    .empty-container {
+        display: none;
+    }
 }
