--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ body {
     padding-left: 20px !important;
     padding-right: 20px !important;
     font-weight: 600;
+    font-size: 1.25rem;
 }
 
 .navbar-light .navbar-nav .nav-link {
@@ -81,7 +82,7 @@ body {
 
 p {
     padding-bottom: 3%;
-    font-size: 1.25rem;
+    font-size: 1.2rem;
 }
 
 h4 {
@@ -164,6 +165,16 @@ h1 {
 }
 
 @media (max-width: 575.98px) {
+    .jumbo-img {
+        display: none;
+    }
+
+    .empty-container {
+        display: none;
+    }
+}
+
+@media (max-width: 767.98px) {
     .jumbo-img {
         display: none;
     }
